--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Main</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<body>
+
+<img src="img/menAtWork.png" style="width:100%">
+
+<div class="">
+ <h1>MEN AT WORK</h1>
+</div>
+
+</body>
+</html>
