--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </style>
 <body>
 
-<img src="img/menAtWork.png" style="width:100%">
+	<center><img src="img/menAtWork.png"></center>
 
 <div class="">
- <h1>MEN AT WORK</h1>
+	<center>	<h1>MEN AT WORK</h1></center>
 </div>
 
 </body>
