--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 </style>
 <body>
 
-	<center><img src="img/menAtWork.png"></center>
-
-<div class="">
-	<center>	<h1>MEN AT WORK</h1></center>
-</div>
+<img src="img/menAtWork.png">
+<h1>MEN AT WORK</h1>
 
 </body>
 </html>
