--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <meta charset="UTF-8">
 <title>Main</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
 <style>
 </style>
 <body>
 
-<img src="img/menAtWork.png">
+<img src="img/burg.jpg" width="600" height="600">
 <h1>MEN AT WORK</h1>
 
 </body>
