Cname & index pic update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 <body>
 
-<img src="img/burg.jpg" width="600" height="600">
+<img src="img/wip.png" width="600" height="600">
 <h1>BURG AT WORK</h1>
 
 </body>
